--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf8">
-		<title></title>
+		<title>gifarator</title>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="js/main.js" defer></script>
 	</head>
 	<body>
-		<h1></h1>
+		<h1>gifarator</h1>
 	</body>
 </html>
